# AssetScan

./: .gitignore  instalacao.txt
DOCS/: INDEX.md  INSTALLATION_DOCS.md
agent/: Cargo.toml
agent-installer/: AssetScanAgent.msi  AssetScanAgent.wixpdb  Product.wsx  Product.wxs  build.cmd
agent/installer/: install.nsi  install.ps1
agent/src/: collector.rs  config.rs  enforcer.rs  hardware_collector.rs  main.rs  network_collector.rs  notifications.rs  screen_time_tracker.rs  screenshot.rs  security_collector.rs  wmi_collector.rs
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  types.ts
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/src/: aggregator.rs  auth.rs  commands.rs  database.rs  email_sender.rs  lib.rs  main.rs  models.rs  scheduler.rs  server.rs  vulnerability_scanner.rs
dashboard/src-tauri/src/api/: mod.rs
dashboard/src-tauri/src/commands/: audit.rs  chatbot.rs  machines.rs  mod.rs  policies.rs  processes.rs  screenshots.rs  vulnerabilities.rs
dashboard/src-tauri/src/compliance/: checks.rs  mod.rs  report_generator.rs
dashboard/src-tauri/src/integrations/: mod.rs  webhooks.rs
dashboard/src-tauri/src/intelligence/: anomaly_detector.rs  mod.rs
dashboard/src/components/: AdvancedFilter.tsx  ChatBot.tsx  HardwareTab.tsx  MachineCard.tsx  MachineDetail.tsx  MachineList.tsx  NetworkTab.tsx  RemoteActionsPanel.tsx  Sidebar.tsx  SoftwareTab.tsx  StatCard.tsx  StatusBadge.tsx  ToastProvider.tsx  TopBar.tsx  ViewModeToggle.tsx
dashboard/src/components/charts/: MetricsCharts.tsx
dashboard/src/contexts/: ThemeContext.tsx
dashboard/src/hooks/: useMachines.ts  useMetricsHistory.ts  usePolicies.ts  useTheme.ts  useVulnerabilities.ts
dashboard/src/pages/: Audit.tsx  Compliance.tsx  Dashboard.tsx  ExecutiveDashboard.tsx  LicenseManager.tsx  MachineDetail.tsx  Machines.tsx  Policies.tsx  Processes.tsx  Profile.tsx  ScreenTime.tsx  SecurityCenter.tsx  Settings.tsx  Vulnerabilities.tsx  Webhooks.tsx
dashboard/src/utils/: exportPDF.ts
