[package]
name = "assetscan-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "assetscan-agent"
path = "src/main.rs"

[dependencies]
sysinfo  = "0.33"                                          # versão actual
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest  = { version = "0.12", features = ["blocking", "json"] }
winreg   = "0.52"
chrono   = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto       = true
strip     = true