[package]
name = "assetscan-agent"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.31"
winreg = "0.52"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1.4.0"
wmi = "0.13"


[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_Notifications",
    "Data_Xml_Dom",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
    "Win32_NetworkManagement_IpHelper",
    "UI_Notifications", # ADICIONA ISTO (Para as Notificações)
    "Data_Xml_Dom",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true