[package]
name = "assetscan-dashboard"
version = "2.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
smartcore = "0.3" 
tokio-cron-scheduler = "0.10"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }

[profile.release]
opt-level = 3
lto = true
